Implemented new changes and changed name of ZPS

--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Admin Dashboard - Chess Tournament Manager{% endblock %}
+{% block title %}Admin Dashboard - Zugzwang Pairings System{% endblock %}
 
 {% block content %}
 <div class="container mt-4">
