--- a/templates/auth/change_password.html
+++ b/templates/auth/change_password.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Change Password - Chess Tournament Manager{% endblock %}
+{% block title %}Change Password - Zugzwang Pairings System{% endblock %}
 
 {% block content %}
 <div class="container mt-4">
