--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Login - Chess Tournament Manager{% endblock %}
+{% block title %}Login - Zugzwang Pairings System{% endblock %}
 
 {% block extra_css %}
 <style>
