--- a/templates/auth/reset_password.html
+++ b/templates/auth/reset_password.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Reset Password - Chess Tournament Manager{% endblock %}
+{% block title %}Reset Password - Zugzwang Pairings System{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
