--- a/templates/legal/privacy.html
+++ b/templates/legal/privacy.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Privacy Policy - Chess Tournament Manager{% endblock %}
+{% block title %}Privacy Policy - Zugzwang Pairings System{% endblock %}
 
 {% block content %}
 <div class="container py-5">
