--- a/templates/tournament/index.html
+++ b/templates/tournament/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Tournaments - Chess Tournament Manager{% endblock %}
+{% block title %}Tournaments - Zugzwang Pairings System{% endblock %}
 
 {% block extra_css %}
 <style>
