--- a/templates/auth/forgot_password.html
+++ b/templates/auth/forgot_password.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Forgot Password - Chess Tournament Manager{% endblock %}
+{% block title %}Forgot Password - Zugzwang Pairings System{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
