--- a/templates/auth/profile.html
+++ b/templates/auth/profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}My Profile - Chess Tournament Manager{% endblock %}
+{% block title %}My Profile - Zugzwang Pairings System{% endblock %}
 
 {% block content %}
 <div class="container mt-4">
