--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Create Account - Chess Tournament Manager{% endblock %}
+{% block title %}Create Account - Zugzwang Pairings System{% endblock %}
 
 {% block extra_css %}
 <style>
