--- a/templates/tournament/create.html
+++ b/templates/tournament/create.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Create Tournament - Chess Tournament Manager{% endblock %}
+{% block title %}Create Tournament - Zugzwang Pairings System{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
